--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <section class="card flex justify-center items-center">
     <div class=" w-[90%] h-96 pt-5 bg-white shadow-xl shadow-gray-300 rounded-md">
         <div class="flex pl-4">
-            <div class="img rounded-[50%] w-20 h-20 bg-[url('../img.jpg')] bg-cover bg-center "></div>
+            <div class="img rounded-[50%] w-20 h-20 bg-[url('../github-user-search-app-icons/img.jpg')] bg-cover bg-center "></div>
             <div class="ml-4 mt-2">
                 <h2 class="font-bold text-2xl text-gray-500">Kasia Zaleska</h2>
                 <h3 class="text-blue-400 font-semibold">@kzaleskaa</h3>
