dark mode activated with js

--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,18 @@
             <div >
                 <span class="font-bold ">Devfnder</span>
             </div>
-            <div>
-                <button class="flex gap-4 items-center font-bold" id="dark-light"><img src="../github-user-search-app-icons/icon-moon.svg" alt="">Dark</button>
+            <div class="" id="dark-light">
+                <button class="flex gap-4 items-center font-bold"><img src="../github-user-search-app-icons/icon-moon.svg" alt="">Dark</button>
+            </div>
+            <div class="hidden" id="white-light">
+                <button class="flex gap-4 items-center font-bold text-white"><img src="../github-user-search-app-icons/icon-sun.svg" alt="">White</button>
             </div>
         </div>
     </header>
 
     <!-- Search Section -->
     <nav class="flex justify-center items-center mb-3">
-        <div class="nav bg-white shadow-xl shadow-gray-300 w-[90%] flex items-center justify-around h-16 rounded-lg gap-5">
+        <div class="nav5 bg-white shadow-xl shadow-gray-300 w-[90%] flex items-center justify-around h-16 rounded-lg gap-5">
             <div>
                 <img src="../github-user-search-app-icons/icon-search.svg" alt="">
             </div>
@@ -43,6 +46,8 @@
         <!-- <div class="card w-[90%]  bg-white shadow-xl shadow-gray-300 rounded-md text-center p-5">
             <p class="text-gray-400">Search for a GitHub user to display their profile</p>
         </div> -->
+
+        
     </section>
 
     <!-- JS File -->
