--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>DevFinder</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 <body class="bg-gray-100">
 
@@ -43,10 +44,6 @@
 
     <!-- Profile Card -->
     <section class="card flex justify-center items-center mt-10">
-        <!-- <div class="card w-[90%]  bg-white shadow-xl shadow-gray-300 rounded-md text-center p-5">
-            <p class="text-gray-400">Search for a GitHub user to display their profile</p>
-        </div> -->
-
         
     </section>
 
